alteracao nos cruds