@@ -3,6 +3,8 @@ import br.com.fiap.MottuSenseApi.dto.ClienteDto;
 import br.com.fiap.MottuSenseApi.model.Cliente;
 import br.com.fiap.MottuSenseApi.repository.ClienteRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -14,10 +16,18 @@ public class ClienteService {
     @Autowired
     private ClienteRepository clienteRepository;
 
-    public List<ClienteDto> findAll() {
-        return clienteRepository.findAll().stream()
-                .map(cliente -> new ClienteDto(cliente.getId(), cliente.getNome(), cliente.getEmail(), cliente.getSenha()))
-                .collect(Collectors.toList());
+    //public List<ClienteDto> findAll() {
+      //  return clienteRepository.findAll().stream()
+        //        .map(cliente -> new ClienteDto(cliente.getId(), cliente.getNome(), cliente.getEmail(), cliente.getSenha()))
+          //      .collect(Collectors.toList());
+    //}
+
+    public List<ClienteDto> findAll(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        return clienteRepository.findAll(pageable)
+                .stream()
+                .map(cliente -> new ClienteDto(cliente))
+                .toList();
     }
 
     public ClienteDto findById(Long id) {
